MD Settings: Clear Browsing Data dialog, dismiss when clearing is done.

- Using browser proxy pattern.
 - Modifying 'performClearBrowserData' to return a Promise.
 - Stop calling JS function by name, use WebUI event instead.
 - Adding tests.

This is in preparation of showing a spinner while clearing is in progress.

BUG=601208

Review URL: https://codereview.chromium.org/1899853004

Cr-Commit-Position: refs/heads/master@{#388129}

Former-commit-id: 44197c803294b7dbe668672c31fc01be76934961