chrome/browser/resources/settings/clear_browsing_data_dialog/clear_browsing_data_browser_proxy.js
@@ -1,0 +1,39 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2016 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+/**
+ * @fileoverview A helper object used from the "Clear browsing data" dialog
+ * to interact with the browser.
+ */
+
+cr.define('settings', function() {
+  /** @interface */
+  function ClearBrowsingDataBrowserProxy() {}
+
+  ClearBrowsingDataBrowserProxy.prototype = {
+    /**
+     * @return {!Promise} A promise resolved when data clearing has completed.
+     */
+    clearBrowsingData: function() {},
+  };
+
+  /**
+   * @constructor
+   * @implements {settings.ClearBrowsingDataBrowserProxy}
+   */
+  function ClearBrowsingDataBrowserProxyImpl() {}
+  cr.addSingletonGetter(ClearBrowsingDataBrowserProxyImpl);
+
+  ClearBrowsingDataBrowserProxyImpl.prototype = {
+    /** @override */
+    clearBrowsingData: function() {
+      return cr.sendWithPromise('clearBrowsingData');
+    },
+  };
+
+  return {
+    ClearBrowsingDataBrowserProxyImpl: ClearBrowsingDataBrowserProxyImpl,
+  };
+});
