chrome/test/data/webui/settings/privacy_page_test.js
@@ -21,26 +21,89 @@ cr.define('settings_privacy_page', function() {
     },
   };
 
-  suite('PrivacyPage', function() {
-    /** @type {settings.TestPrivacyPageBrowserProxy} */
-    var testBrowserProxy;
+  /**
+   * @constructor
+   * @extends {TestBrowserProxy}
+   * @implements {settings.ClearBrowsingDataBrowserProxy}
+   */
+  function TestClearBrowsingDataBrowserProxy() {
+    settings.TestBrowserProxy.call(this, ['clearBrowsingData']);
+  }
 
-    /** @type {SettingsPrivacyPageElement} */
-    var page;
+  TestClearBrowsingDataBrowserProxy.prototype = {
+    __proto__: settings.TestBrowserProxy.prototype,
 
-    setup(function() {
-      testBrowserProxy = new TestPrivacyPageBrowserProxy();
-      settings.PrivacyPageBrowserProxyImpl.instance_ = testBrowserProxy;
-      PolymerTest.clearBody();
-      page = document.createElement('settings-privacy-page');
-      document.body.appendChild(page);
+    /** @override */
+    clearBrowsingData: function() {
+      this.methodCalled('clearBrowsingData');
+      return Promise.resolve();
+    },
+  };
+
+  function registerNativeCertificateManagerTests() {
+    suite('NativeCertificateManager', function() {
+      /** @type {settings.TestPrivacyPageBrowserProxy} */
+      var testBrowserProxy;
+
+      /** @type {SettingsPrivacyPageElement} */
+      var page;
+
+      setup(function() {
+        testBrowserProxy = new TestPrivacyPageBrowserProxy();
+        settings.PrivacyPageBrowserProxyImpl.instance_ = testBrowserProxy;
+        PolymerTest.clearBody();
+        page = document.createElement('settings-privacy-page');
+        document.body.appendChild(page);
+      });
+
+      teardown(function() { page.remove(); });
+
+      test('NativeCertificateManager', function() {
+        MockInteractions.tap(page.$.manageCertificates);
+        return testBrowserProxy.whenCalled('showManageSSLCertificates');
+      });
     });
+  }
 
-    teardown(function() { page.remove(); });
+  function registerClearBrowsingDataTests() {
+    suite('ClearBrowsingData', function() {
+      /** @type {settings.TestClearBrowsingDataBrowserProxy} */
+      var testBrowserProxy;
 
-    test('NativeCertificateManager', function() {
-      MockInteractions.tap(page.$.manageCertificates);
-      return testBrowserProxy.whenCalled('showManageSSLCertificates');
+      /** @type {SettingsClearBrowsingDataDialogElement} */
+      var element;
+
+      setup(function() {
+        testBrowserProxy = new TestClearBrowsingDataBrowserProxy();
+        settings.ClearBrowsingDataBrowserProxyImpl.instance_ = testBrowserProxy;
+        PolymerTest.clearBody();
+        element = document.createElement('settings-clear-browsing-data-dialog');
+        document.body.appendChild(element);
+      });
+
+      teardown(function() { element.remove(); });
+
+      test('ClearBrowsingDataTap', function() {
+        element.open();
+        assertTrue(element.$.dialog.opened);
+        var clearBrowsingDataButton = element.$.clearBrowsingData;
+        assertTrue(!!clearBrowsingDataButton);
+
+        MockInteractions.tap(clearBrowsingDataButton);
+        return testBrowserProxy.whenCalled('clearBrowsingData').then(
+            function() {
+              assertFalse(element.$.dialog.opened);
+            });
+      });
     });
-  });
+  }
+
+  return {
+    registerTests: function() {
+      if (cr.isMac || cr.isWin)
+        registerNativeCertificateManagerTests();
+
+      registerClearBrowsingDataTests();
+    },
+  };
 });
